--- a/templates/includes/header-home.html
+++ b/templates/includes/header-home.html
@@ -44,7 +44,7 @@
 
 
 						{# contact button #}
-		            	<button id="js-contact-nav" style="padding-left: 18px; padding-right: 18px;" type="button" class="btn btn-default navbar-btn" data-toggle="tooltip" data-placement="bottom" title="Contacto (clique para enviar um email para drota.sra@gov-madeira.pt)">
+		            	<button id="js-contact-nav" style="padding-left: 18px; padding-right: 18px;" type="button" class="btn btn-default navbar-btn" data-toggle="tooltip" data-placement="bottom" title="Contacto (clique para enviar um email)">
 		            		<i class="fa fa-at" style="font-size: 120%;"></i>
 		            	</button>
 
