--- a/templates/common/common_scripts.html
+++ b/templates/common/common_scripts.html
@@ -22,7 +22,7 @@ Clima.userId = {{ ctx.auth.credentials.id | default(-1) }};
 Clima.isAdmin = {{ ctx.auth.credentials.isAdmin | default(false) }};
 Clima.publicUri = "http://{{ publicUri }}";
 Clima.publicPort = {{ publicPort }};
-Clima.showEnglish = {{ ctx.showEnglish }};
+Clima.showEnglish = {{ ctx.showEnglish | default(true) }};
 
 </script>
 <script src="/static/_js/main.js"></script>
