--- a/templates/tilemill.html
+++ b/templates/tilemill.html
@@ -53,6 +53,65 @@
 
   <div class='mask'></div>
 
+{#
+    {% include "common/common_scripts.html" %} 
+
+    <script src="/static/_js/{{ bundles['dashboard-templates'] }}"></script>
+#}
+    {% if NODE_ENV == "production" %}
+
+    <script src="/static/_js/{{ bundles['dashboard-libs'] }}"></script>
+    <script src="/static/_js/{{ bundles['dashboard-app'] }}"></script>
+
+    {% else %}
+
+    {# dashboard libs #}
+    {# NOTE: if we add new files here, we must add in the gruntfile as well #}
+
+
+    <script src="/static/underscore/underscore-1.6.0.js"></script>
+
+
+    <script src="/static/underscore/underscore.string-3.0.3.js"></script>
+    <script src="/static/q/q-1.1.2.js"></script>
+    <script src="/static/bootstrap/bootstrap-fileinput-4.2.0.js"></script>
+    <script src="/static/bootstrap-colorpicker/2.2.0/js/bootstrap-colorpicker.js"></script>
+    <script src="/static/bootstrap/bootstrap-notify-51a18c.js"></script>
+    <script src="/static/bootstrap/bootstrap-modal-2.2.5.js"></script>    
+    <script src="/static/jquery/jquery-sortable-0.9.13.js"></script>
+    <script src="/static/fecha/fecha-1.0.0.js"></script>
+    <script src="/static/nunjucks/nunjucks-slim-1.3.3.js"></script>
+    <script src="/static/chroma/chroma-1.0.1.js"></script>
+    <script src="/static/prism/prism.js"></script>
+    <script src="/static/backbone/json2.js"></script>
+    <script src="/static/backbone/backbone-1.1.2.js"></script>
+    <script src="/static/backbone/backbone.radio-1.0.1.js"></script>
+    <script src="/static/backbone/backbone.attributes-5b0f73.js"></script>
+    <script src="/static/backbone/backbone.syphon-0.6.2.js"></script>
+    <script src="/static/backbone/backbone.marionette-2.4.1.js"></script>
+    <script src="/static/backbone/renderer-nunjucks.js"></script>
+{#
+#}
+
+    {# dashboard app #}
+    {# NOTE: if we add new files here, we must add in the gruntfile as well #}
+
+{#
+    <script src="/dashboard/entities.js"></script>
+    <script src="/dashboard/behaviors.js"></script>
+    <script src="/dashboard/profile/profile.js"></script>
+    <script src="/dashboard/texts/texts.js"></script>
+    <script src="/dashboard/users/users.js"></script>
+    <script src="/dashboard/indicators/indicators.js"></script>
+    <script src="/dashboard/files/files.js"></script>
+    <script src="/dashboard/maps/maps.js"></script>
+    <script src="/dashboard/color-brew.js"></script>    
+    <script src="/dashboard/menu-left/menu-left.js"></script>
+    <script src="/dashboard/main-layout/main-layout.js"></script>
+    <script src="/dashboard/index.js"></script>
+#}
+
+    {% endif %}
 </body>
 
 </html>
